# Vai

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  example_config
main/: CMakeLists.txt
main/src/bash/: vai-completion.bash
main/src/cpp/: main.cpp  test.cpp
main/src/cpp/config/: config_format.hpp  config_manager.cpp  config_manager.hpp  config_model.hpp  config_parser.cpp  config_parser.hpp
main/src/cpp/config/executor/: executor.cpp  executor.hpp  executor_manager.hpp  executor_manager_parser.hpp  executor_parser.cpp  executor_parser.hpp
main/src/cpp/config/executor/completer/: abstract_completer.hpp  completer_registry.cpp  completer_registry.hpp  duck_completer.cpp  duck_completer.hpp  dumb_completer.hpp  google_completer.cpp  google_completer.hpp
main/src/cpp/config/executor/encoder/: url_encoder.hpp
main/src/cpp/config/executor/parser/: abstract_parser.hpp  duck_parser.hpp  dumb_parser.hpp  google_parser.hpp  parser_registry.cpp  parser_registry.hpp  word_parser.hpp
main/src/cpp/executor/: executor.hpp  executor_store.cpp  executor_store.hpp
main/src/cpp/model/: executor.hpp
main/src/cpp/parser/: abstract_parser.hpp  dumb_parser.hpp  parser_registry.cpp  parser_registry.hpp  word_parser.hpp
main/src/cpp/view/: console.cpp  console.hpp
main/src/zsh/: _vai
src/cpp/: main.cpp
src/cpp/model/: executor.hpp
src/cpp/model/parser/: word_parser.hpp
src/main/cpp/: main.cpp
src/main/cpp/model/parser/: abstract_parser.hpp  word_parser.hpp
test/: CMakeLists.txt
test/src/cpp/config/: config_manager_test.cpp
test/src/cpp/config/executor/parser/: word_parser_test.cpp
test/src/cpp/model/: word_parser_test.cpp
